<resources>
    <string name="app_name">my plants</string>
    <string name="title_friends">friends</string>
    <string name="title_plants">plants</string>
    <string name="title_settings">settings</string>
    <string name="title_activity_settings">settings</string>
    <string name="user_name">Dasha</string>
    <string name="user_email">dasha.sadykova@example.com</string>
    <string name="friends">Friends</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="switch_to_default_photo">Switch to default/user photo</string>
</resources>
