<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_friends">

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.my_plants.ui.friends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_plants"
        android:name="com.example.my_plants.ui.plant.PlantFragment"
        android:label="@string/title_plants"
        tools:layout="@layout/fragment_plant" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.my_plants.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>